@@ -38,6 +38,11 @@ The build process uses Maven.
         <td>&nbsp;</td>
         <td><code>spring-boot:run</code></td>
     </tr>
+    <tr>
+        <td>Build Docker Image</td>
+        <td>&nbsp;</td>
+        <td><code>spring-boot:build-image</code></td>
+    </tr>
 </table>
 
 ## Show me the important parts
@@ -62,7 +67,7 @@ version: "3.9"
 services:
   jboss.keycloak:
     image: gunnaraccso/keycloak.server:21.1.1
-    restart: always
+    restart: unless-stopped
     environment:
       TZ: Europe/Berlin
       DB_VENDOR: h2
@@ -216,10 +221,10 @@ public void doFilter(ServletRequest request, ServletResponse response, FilterCha
     } else if (authentication.getPrincipal() instanceof OidcUser) {
         userId = ((OidcUser)authentication.getPrincipal()).getName();
     } else {
-        throw new ServletException("Invalid authentication request token");
+        throw new AccessDeniedException("Invalid authentication request token");
     }
     if (StringUtils.isEmpty(userId)) {
-        throw new ServletException("Unable to extract user-name-attribute from token");
+        throw new AccessDeniedException("Unable to extract user-name-attribute from token");
     }
 
     LOG.debug("Extracted userId from bearer token: {}", userId);
@@ -232,6 +237,8 @@ public void doFilter(ServletRequest request, ServletResponse response, FilterCha
     }
 }
 ```
+
+The REST API URL for this example is `http://localhost:8080/camunda/engine-rest`. Every request requires a JWT token from Keycloak.
 
 A unit test checking the REST Api security is provided in class ``RestApiSecurityConfigTest``. Please be aware that the unit test requires a running Keycloak Server including the setup described above. Therefore it is ignored as standard.
 
@@ -288,17 +295,18 @@ In order to provide a Keycloak specific logout handler, we first have to add the
 @Inject
 private KeycloakLogoutHandler keycloakLogoutHandler;
 
-  @Override
-  protected void configure(HttpSecurity http) throws Exception {
-      http
-      ...
-    .oauth2Login()
-    .and()
-      .logout()
-      .logoutRequestMatcher(new AntPathRequestMatcher("/app/**/logout"))
+@Bean
+@Order(2)
+public SecurityFilterChain httpSecurity(HttpSecurity http) throws Exception {
+  return http
+    ...
+    .oauth2Login(withDefaults())
+    .logout(logout -> logout
+      .logoutRequestMatcher(antMatcher("/app/**/logout"))
       .logoutSuccessHandler(keycloakLogoutHandler)
-      ;
-  }
+    )
+    .build();
+}
 ```
 
 The handler itself (see ``org.camunda.bpm.extension.keycloak.showcase.sso.KeycloakLogoutHandler``) takes care of sending an appropriate redirect to Keycloak. The redirect URI will look similar to
@@ -330,48 +338,19 @@ Finally - a quick introduction on how to setup Keycloak and this showcase on Kub
 
 ![KubernetesSetup](docs/KubernetesSetup.PNG)
 
+### Docker Image Build
 
-Before we turn to Kubernetes it is necessary to shortly introduce the Docker Build process.
+Before we turn to Kubernetes it is necessary to build the Docker image. As we included the ``spring-boot-maven-plugin`` everything is quite simple, just run ``mvn spring-boot:build-image``.
 
-### Multi-Stage Docker Build
+The Docker Image Build is using the `gcr.io/paketo-buildpacks/adoptium` Buildpack having JDK's jlink tool at build time enabled to generate a custom slim JRE.
 
-The Dockerfile is using a multi-stage Docker build starting with a maven Docker image. Why do we do that? Because we do not want to deal with maven and java versions etc. within our pipeline. In our case the pipeline will have to deal with Docker, that's all.
+#### Java module dependencies & jlinked Java 17
 
-The Docker build uses the separate standalone Maven `docker-pom.xml` as build file. When using the Camunda Enterprise Version you have to adapt the file ``settings-docker.xml`` and set your credentials of the Camunda Enterprise Maven Repository accordingly:
+Just for the records - how to find out java module dependencies and shrink your JRE:
+* Extract ``target/camunda-platform-7-keycloak-examples-sso-kubernetes.jar/BOOT-INF/lib`` to `target/lib``
+* Open a shell in ``target`` and run ``jdeps -cp lib/* -R --multi-release 17 --print-module-deps --ignore-missing-deps camunda-platform-7-keycloak-examples-sso-kubernetes.jar``
 
-```xml
-<!-- Maven Settings for Docker Build -->
-<servers>
-    <server>
-        <id>camunda-bpm-ee</id>
-        <username>xxxxxx</username>
-        <password>xxxxxx</password>
-    </server>
-</servers>
-```
-
-Just run a standard Docker image build to get your docker container.
-
-### Java module dependencies & jlinked Java 11
-
-The Dockerfile includes stages for building a shrinked JDK 11 using Java's ``jlink``. Keep in mind that this is optional.
-
-Just for the records - how to find out java module dependencies and shrink your JDK:
-* Extract ``target/camunda-showcase-keycloak.jar/BOOT-INF/lib`` to `target/lib``
-* Open a shell in ``target`` and run ``jdeps -cp lib/* -R --multi-release 11 --print-module-deps --ignore-missing-deps camunda-showcase-keycloak.jar``
-
-The result goes to the jlink ``add-modules`` option in the following Dockerfile section (which has already been applied for this showcase):
-
-```Dockerfile
-# jlinked java 11 (do NOT use alpine-slim here which has important module files deleted)
-FROM adoptopenjdk/openjdk11:jdk-11.0.3_7-alpine AS JLINKED_JAVA
-RUN ["jlink", "--compress=2", \
-      "--module-path", "/opt/java/openjdk/jmods", \
-      "--add-modules", "java.base,java.compiler,java.desktop,java.instrument,java.management,java.prefs,java.rmi,java.scripting,java.security.jgss,java.security.sasl,java.sql.rowset,jdk.httpserver,jdk.jdi,jdk.unsupported", \
-      "--output", "/jlinked"]
-```
-
-The final result will be a slim custom JDK which has been reduced in image size. Feel free to skip this part, delete the corresponding Dockerfile sections and use a full JDK 11 as base image for your Spring Boot Application.
+The result goes to the jlink `add-modules` option in the `BP_JVM_JLINK_ARGS` environment parameter of the `spring-boot-maven-plugin` image configuration.
 
 ### Kubernetes
 
